@@ -1,3 +1,3 @@
-SUBDIRS = gnome demos doc
+SUBDIRS = gnome demos doc tests
 
 EXTRA_DIST = ChangeLog NEWS README AUTHORS $(wildcard *.ac)
