@@ -1,0 +1,3 @@
+include ../../tests.mk
+
+wrapset_modules = ((gnome gw corba) (gnome corba) (gnome corba primitives) (gnome corba types))
